infra/k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edu-homework-grader
  labels:
    app.kubernetes.io/part-of: edu-homework-grader
