infra/k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edu-homework-grader
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts: ["edu.getkr.com"]
      secretName: edu-getkr-com-tls
  rules:
    - host: edu.getkr.com
      http:
        paths:
          - path: /realms
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: http
